crates/pg_syntax/tests/snapshots/postgres_regress/regex@35.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('b', 'a*(?<!a)b+');"
---
SelectStmt@0..41
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..25
        Sconst@22..25 "'b'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..39
        Sconst@27..39 "'a*(?<!a)b+'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

