crates/pg_syntax/tests/snapshots/postgres_regress/regex@38.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('foobar', '(?<=f)b+');"
---
SelectStmt@0..44
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..42
    FuncCall@7..42
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..30
        Sconst@22..30 "'foobar'"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..42
        Sconst@32..42 "'(?<=f)b+'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

