crates/pg_syntax/tests/snapshots/postgres_regress/regex@39.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('foobar', '(?<=foo)b+');"
---
SelectStmt@0..46
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..30
        Sconst@22..30 "'foobar'"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..44
        Sconst@32..44 "'(?<=foo)b+'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

