crates/pg_syntax/tests/snapshots/postgres_regress/regex@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('foobar', '(?<=oo)b+');"
---
SelectStmt@0..45
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..43
    FuncCall@7..43
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..30
        Sconst@22..30 "'foobar'"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..43
        Sconst@32..43 "'(?<=oo)b+'"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

